# agente_vivacita

./: .env.example  .env.test  .mcp.json  CLAUDE.md  Dockerfile  README.md  app-spec.yaml  debug_server.py  docker-compose.yml  pyproject.toml  requirements.txt  test_basic.py  test_end_to_end.py  test_fastapi_complete.py  test_higia_agent.py  test_higia_simple.py  test_mcp_integration.py  test_openai_integration.py  test_openrouter_whisper.py  test_router_simple.py  test_simple_mcp.py  test_structure.py  test_webhook_debug.py
.claude/: settings.local.json
docs/: CREWAI_INTEGRATION.md  Chat-System-Project-Guide.md  checklist_funcionalidade.md  original_prompt.md  plano_implementacao_2025.md
scripts/: init-db.sql
src/: __init__.py  main.py
src/agents/: higia_agent.py  higia_enhanced.py  medical_crew.py
src/api/: main.py
src/api/middleware/: logging.py  security.py
src/api/routers/: health.py  webhook.py
src/api/v1/: api.py
src/api/v1/endpoints/: health.py  webhook.py
src/clients/: evolution_client.py
src/core/: config.py  logging.py
src/core/chat/: processor.py
src/core/routing/: webhook_router.py
src/integrations/audio/: __init__.py  whisper_client.py
src/integrations/whatsapp/: client.py
src/knowledge/: vivacita_clinic_kb.py
src/tools/: higia_tools.py  medical_tools.py  vivacita_mcp_tool.py
tests/: conftest.py  test_medical_tools.py  test_webhook_router.py
